<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_option_status"
            android:icon="@drawable/ic_drawer_status"
            android:title="@string/drawer_option_status" />
        <item
            android:id="@+id/drawer_option_alarms"
            android:icon="@drawable/ic_drawer_alarms"
            android:title="@string/drawer_option_alarms" />
        <item
            android:id="@+id/drawer_option_pictures"
            android:icon="@drawable/ic_drawer_pictures"
            android:title="@string/drawer_option_pictures" />
        <item
            android:id="@+id/drawer_option_settings"
            android:icon="@drawable/ic_drawer_settings"
            android:title="@string/drawer_option_settings" />
        <item
            android:id="@+id/drawer_option_logout"
            android:icon="@drawable/ic_drawer_logout"
            android:title="@string/drawer_option_logout"
            android:checkable="false"/>
    </group>
</menu>
