<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:theme="@style/WhiteTextLabel">

        <EditText
            android:id="@+id/etxt_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@android:color/white"
            android:hint="@string/ip_adress"
            android:theme="@style/WhiteEditTextTheme"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_ip"
            android:layout_centerHorizontal="true"
            android:theme="@style/WhiteTextLabel">
        <EditText
            android:id="@+id/etxt_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@android:color/white"
            android:hint="@string/login_name"
            android:theme="@style/WhiteEditTextTheme"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_username"
            android:layout_centerHorizontal="true"
            android:theme="@style/WhiteTextLabel">
        <EditText
            android:id="@+id/etxt_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etxt_username"
            android:layout_centerHorizontal="true"
            android:ems="10"
            android:textColor="@android:color/white"
            android:hint="@string/password_name"
            android:inputType="textPassword"
            android:theme="@style/WhiteEditTextTheme"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/til_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="26dp"
            android:text="@string/log_in"
            android:ems="10"
            android:textColor="@android:color/white"
            android:background="@drawable/login_button_shape"/>

    </RelativeLayout>


</RelativeLayout>
